# wasm-3d

./: .gitignore  Cargo.toml  README.md  gulpfile.js  index.html  package-lock.json  package.json  tsconfig.json
src/: lib.rs  object.rs
src/graphics/: camera.rs  gl.rs  graphics.rs  mod.rs  shaders.rs
src/graphics/shaders/: 3d_vert.glsl  here_vert.glsl  mod.rs  orange_frag.glsl  shader_sources.rs
src/logic/: mod.rs  object.rs  vertex.rs  world.rs
typescript/: input.ts  script.ts
