[package]
name = "wasm-engine"
version = "0.1.0"
edition = "2021"
description = "Another fucking WASM game engine"
repository = "https://github.com/red2fred2/wasm-3d"
license = "MPL 2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window'
]